案例列表页添加一个全部

--- a/example.html
+++ b/example.html
@@ -67,14 +67,17 @@
 		</div>
 		<div class="ex-main">
 			<div class="ex-main-box">
+				<!-- PPT定制 -->
 				<div class="ex-tab active">
 					<ul class="ex-nav-tabs clearfix">
-						<li class="cur"><a href="#">发布会/年会</a></li>
+						<li class="cur"><a href="#">全部</a></li>
+						<li><a href="#">发布会/年会</a></li>
 						<li><a href="#">企业形象宣传</a></li>
 						<li><a href="#">政府/企业汇报</a></li>
 						<li><a href="#">其他</a></li>
 					</ul>
 					<div class="ex-tab-content">
+						<!-- 全部 -->
 						<div class="ex-tab-pane clearfix active">
 							<ul class="ex-tab-list active clearfix">
 								<li>
@@ -205,11 +208,13 @@
 										</div>
 										<div class="ex-list-ft">
 											<span class="topic">斯堪尼亚海格媒体沟通会</span>
-											<span class="describition">沟通会</span>
+											<span class="describition">沟通会11</span>
 										</div>
 									</a>
 								</li>
 							</ul>
+
+							<!-- 第二页 -->
 							<ul class="ex-tab-list clearfix">
 								<li>
 									<a href="#">
@@ -229,7 +234,7 @@
 										</div>
 										<div class="ex-list-ft">
 											<span class="topic">斯堪尼亚海格媒体沟通会</span>
-											<span class="describition">沟通会</span>
+											<span class="describition">沟通会22</span>
 										</div>
 									</a>
 								</li>
@@ -243,6 +248,146 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
+
+						<!-- 发布会/年会 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 企业形象宣传 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 政府/企业汇报 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 其他 -->
 						<div class="ex-tab-pane clearfix">
 							<ul class="ex-tab-list active clearfix">
 								<li>
@@ -265,60 +410,21 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
-						<div class="ex-tab-pane clearfix">
-							<ul class="ex-tab-list active clearfix">
-								<li>
-									<a href="#">
-										<div class="ex-list-img">
-											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
-										</div>
-										<div class="ex-list-ft">
-											<span class="topic">斯堪尼亚海格媒体沟通会</span>
-											<span class="describition">沟通会</span>
-										</div>
-									</a>
-								</li>
-							</ul>
-							<div class="ex-pagination">
-								<span class="prev"> < </span>
-								<ul class="ex-page">
-									<li class="active">1</li>
-								</ul>
-								<span class="next"> > </span>
-							</div>
-						</div>
-						<div class="ex-tab-pane clearfix">
-							<ul class="ex-tab-list active clearfix">
-								<li>
-									<a href="#">
-										<div class="ex-list-img">
-											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
-										</div>
-										<div class="ex-list-ft">
-											<span class="topic">斯堪尼亚海格媒体沟通会</span>
-											<span class="describition">沟通会</span>
-										</div>
-									</a>
-								</li>
-							</ul>
-							<div class="ex-pagination">
-								<span class="prev"> < </span>
-								<ul class="ex-page">
-									<li class="active">1</li>
-								</ul>
-								<span class="next"> > </span>
-							</div>
-						</div>
+
 					</div>
 				</div>
+
+				<!-- 视频动画 -->
 				<div class="ex-tab">
 					<ul class="ex-nav-tabs clearfix">
-						<li class="cur"><a href="#">发布会/年会</a></li>
+						<li  class="cur"><a href="#">全部</a></li>
+						<li><a href="#">发布会/年会</a></li>
 						<li><a href="#">企业形象宣传</a></li>
 						<li><a href="#">政府/企业汇报</a></li>
 						<li><a href="#">其他</a></li>
 					</ul>
 					<div class="ex-tab-content">
+						<!-- 全部 -->
 						<div class="ex-tab-pane clearfix active">
 							<ul class="ex-tab-list active clearfix">
 								<li>
@@ -396,8 +502,43 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
+
+						<!-- 发布会/年会 -->
 						<div class="ex-tab-pane clearfix">
 							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
 								<li>
 									<a href="#">
 										<div class="ex-list-img">
@@ -418,8 +559,32 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
+
+						<!-- 企业形象宣传 -->
 						<div class="ex-tab-pane clearfix">
 							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
 								<li>
 									<a href="#">
 										<div class="ex-list-img">
@@ -440,6 +605,43 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
+
+						<!-- 政府/企业汇报 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 其他 -->
 						<div class="ex-tab-pane clearfix">
 							<ul class="ex-tab-list active clearfix">
 								<li>
@@ -464,14 +666,19 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- 宣传品设计 -->
 				<div class="ex-tab">
 					<ul class="ex-nav-tabs clearfix">
-						<li class="cur"><a href="#">发布会/年会</a></li>
+						<li class="cur"><a href="#">全部</a></li>
+						<li><a href="#">发布会/年会</a></li>
 						<li><a href="#">企业形象宣传</a></li>
 						<li><a href="#">政府/企业汇报</a></li>
 						<li><a href="#">其他</a></li>
 					</ul>
 					<div class="ex-tab-content">
+
+						<!-- 全部 -->
 						<div class="ex-tab-pane clearfix active">
 							<ul class="ex-tab-list active clearfix">
 								<li>
@@ -485,6 +692,50 @@
 										</div>
 									</a>
 								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
 							</ul>
 							<div class="ex-pagination">
 								<span class="prev"> < </span>
@@ -494,6 +745,146 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
+
+						<!-- 发布会/年会 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 企业形象宣传 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 政府/企业汇报 -->
+						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+
+						<!-- 其他 -->
 						<div class="ex-tab-pane clearfix">
 							<ul class="ex-tab-list active clearfix">
 								<li>
@@ -516,50 +907,8 @@
 								<span class="next"> > </span>
 							</div>
 						</div>
-						<div class="ex-tab-pane clearfix">
-							<ul class="ex-tab-list active clearfix">
-								<li>
-									<a href="#">
-										<div class="ex-list-img">
-											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
-										</div>
-										<div class="ex-list-ft">
-											<span class="topic">斯堪尼亚海格媒体沟通会</span>
-											<span class="describition">沟通会</span>
-										</div>
-									</a>
-								</li>
-							</ul>
-							<div class="ex-pagination">
-								<span class="prev"> < </span>
-								<ul class="ex-page">
-									<li class="active">1</li>
-								</ul>
-								<span class="next"> > </span>
-							</div>
-						</div>
-						<div class="ex-tab-pane clearfix">
-							<ul class="ex-tab-list active clearfix">
-								<li>
-									<a href="#">
-										<div class="ex-list-img">
-											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
-										</div>
-										<div class="ex-list-ft">
-											<span class="topic">斯堪尼亚海格媒体沟通会</span>
-											<span class="describition">沟通会</span>
-										</div>
-									</a>
-								</li>
-							</ul>
-							<div class="ex-pagination">
-								<span class="prev"> < </span>
-								<ul class="ex-page">
-									<li class="active">1</li>
-								</ul>
-								<span class="next"> > </span>
-							</div>
-						</div>
+
+
 					</div>
 				</div>
 			</div>
