--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 				                                    <div class="range range-lg-center">
 				                    					<div class="cell-lg-12">
 				                                            <h1>
-				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="500" class="hidden big text-uppercase intro2-title">
+				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="400" class="hidden big text-uppercase intro2-title">
 				                                            		<img src="./images/swiper/intro-02-title.png">
 				                                            	</span>
 				                                            </h1>
 				                                        </div>
 				                                        <div class="cell-lg-10 offset-top-30">
-				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden text-light">
+				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="800" class="hidden text-light">
 				                                            	<p>
 				                                            		<span class="caption-txt intro2-txt">更震撼的企业宣传  &nbsp;&nbsp;更生动的产品推荐</span>
 				                                            		<img src="./images/swiper/intro-02-line.png">
@@ -133,6 +133,47 @@
 			                                                		<img src="./images/swiper/intro-02-btn-icon2.png">
 			                                                	</a>
 		                                                	</div>
+				                                    	</div>
+				                                    </div>
+				                                </div>
+				                            </div>
+				                        </div>
+				                    </div>
+				                    <div id="page-loader" data-slide-bg="./images/swiper/intro-03-1920x955.jpg" data-preview-bg="./images/swiper/intro-03-1920x955.jpg" class="swiper-slide">
+				                        <div data-speed="0.5" data-fade="true" class="swiper-caption swiper-parallax">
+				                            <div class="swiper-slide-caption">
+				                                <div class="shell">
+				                                    <div class="range range-lg-center mb100">
+				                                        <div class="cell-lg-12">
+				                                            <h1>
+				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="400" class="hidden big text-uppercase intro3-title">
+				                                            		<div class="intro3-topic">
+				                                            			<span class="txt">专注定制</span>
+				                                            			<img src="./images/swiper/intro-03-topic.png">
+				                                            		</div>
+				                                            		<img src="./images/swiper/intro-03-title.png">
+				                                            	</span>
+				                                            </h1>
+				                                        </div>
+				                                        <div class="cell-lg-10 offset-top-30">
+				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="800" class="hidden text-light">
+				                                            	<p>
+				                                            		<span class="caption-txt intro1-txt"> 福特、一汽、亚信安全等多个企业</span>
+				                                            	</p>
+				                                            	<div class="intro3-txts">
+																	<span class="txt1">指定</span>
+																	<span class="txt2">服务商</span>
+																	<span class="txt3">众多品牌年会、发布会共同的选择</span>
+																	<span class="txt4">全程化一站式高端服务</span>
+				                                            	</div>
+				                                            </h4>
+				                                        </div>
+				                                    </div>
+				                                    <div class="group group-xl offset-top-20 offset-xs-top-50">
+				                                    	<div class="hidden btn-border" data-caption-animate="fadeInUp" data-caption-delay="1000">
+															<a href="#" class="btn btn-anis-effect">
+		                                                		<span class="btn-text">Read more</span>
+		                                                	</a>
 				                                    	</div>
 				                                    </div>
 				                                </div>
