--- a/index.html
+++ b/index.html
@@ -180,6 +180,46 @@
 				                            </div>
 				                        </div>
 				                    </div>
+				                    <div id="page-loader" data-slide-bg="./images/swiper/intro-04-1920x955.jpg" data-preview-bg="./images/swiper/intro-04-1920x955.jpg" class="swiper-slide">
+				                        <div data-speed="0.5" data-fade="true" class="swiper-caption swiper-parallax">
+				                            <div class="swiper-slide-caption">
+				                                <div class="shell">
+				                                    <div class="range range-lg-center mb100">
+				                                        <div class="cell-lg-12">
+				                                            <h1>
+				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="400" class="hidden big text-uppercase intro3-title">
+				                                            		<div class="intro4-topic">
+				                                            			<span class="txt1">办公技能</span>
+				                                            			<span class="txt2">培训</span>
+				                                            			<img src="./images/swiper/intro-04-topic.png">
+				                                            		</div>
+				                                            		<span>
+				                                            			<span class="intro4-title">精品课程</span>
+				                                            			<span>优质培训</span>
+				                                            		</span>
+				                                            	</span>
+				                                            </h1>
+				                                        </div>
+				                                        <div class="cell-lg-10 offset-top-30">
+				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="800" class="hidden text-light">
+				                                            	<p>
+				                                            		<span class="caption-txt intro1-txt">东风日产、平安保险、贵人鸟等企业</span>
+				                                            		<span class="caption-txt intro4-txt">签约内训品牌</span>
+				                                            	</p>
+				                                            </h4>
+				                                        </div>
+				                                    </div>
+				                                    <div class="group group-xl offset-top-20 offset-xs-top-50">
+				                                    	<div class="hidden btn-border" data-caption-animate="fadeInUp" data-caption-delay="1000">
+															<a href="#" class="btn btn-anis-effect">
+		                                                		<span class="btn-text">Read more</span>
+		                                                	</a>
+				                                    	</div>
+				                                    </div>
+				                                </div>
+				                            </div>
+				                        </div>
+				                    </div>
 				                </div>
 				                <div data-speed="0.5" class="swiper-button swiper-button-prev swiper-parallax">
 				                    <div class="preview">
