--- a/index.html
+++ b/index.html
@@ -76,13 +76,17 @@
 				                                    <div class="range range-lg-center mb100">
 				                                        <div class="cell-lg-12">
 				                                            <h1>
-				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="500" class="hidden big text-uppercase">
+				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="400" class="hidden big text-uppercase intro1-title">
+				                                            		<div class="intro1-topic">
+				                                            			<span class="txt">专注演示</span>
+				                                            			<img src="./images/swiper/intro-01-topic.png">
+				                                            		</div>
 				                                            		<span class="orange">助力您的</span>每一场演示
 				                                            	</span>
 				                                            </h1>
 				                                        </div>
 				                                        <div class="cell-lg-10 offset-top-30">
-				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden text-light">
+				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="800" class="hidden text-light">
 				                                            	<p>
 				                                            		<span class="caption-txt intro1-txt">声画合一&nbsp;&nbsp;彰显企业风范</span>
 				                                            	</p>
