导航滚动激活

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				</a>
 				<div class="container">
 					<ul class="nav clearfix">
-						<li class="first">
-							<a href='' data-target="">首页</a>
+						<li class="active cur first">
+							<a href='#' data-target="silde">首页</a>
 						</li>
 						<li>
 							<a href='#' data-target="about">关于绎奇</a>
@@ -38,13 +38,16 @@
 							<a href='#' data-target="example">经典案例</a>
 						</li>
 						<li>
-							<a href='#' data-target="service">服务类目</a>
-						</li>
-						<li>
 							<a href='#' data-target="lession">培训课程</a>
 						</li>
 						<li>
+							<a href='#' data-target="service">服务类目</a>
+						</li>
+						<li>
 							<a href='#' data-target="">最新动态</a>
+						</li>
+						<li>
+							<a href='#' data-target="partner">合作伙伴</a>
 						</li>
 						<li class="last">
 							<a href='#' data-target="contact">联系我们</a>
