--- a/lession.html
+++ b/lession.html
@@ -31,13 +31,16 @@
 					<a href='#' data-target="example">经典案例</a>
 				</li>
 				<li>
-					<a href='#' data-target="service">服务类目</a>
-				</li>
-				<li>
 					<a href='#' data-target="lession">培训课程</a>
 				</li>
 				<li>
+					<a href='#' data-target="service">服务类目</a>
+				</li>
+				<li class="active cur">
 					<a href='#' data-target="">最新动态</a>
+				</li>
+				<li>
+					<a href='#' data-target="partner">合作伙伴</a>
 				</li>
 				<li class="last">
 					<a href='#' data-target="contact">联系我们</a>
