--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta content="yes" name="apple-touch-fullscreen">
 	<meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
 	<title>绎奇官网</title>
-	<link rel="stylesheet" type="text/css" href="./css/base.css?v=201702131026">
+	<link rel="stylesheet" type="text/css" href="./css/base.css?v=201702202211">
 	<link rel="stylesheet" type="text/css" href="./css/swiper.css?v=201611170957">
-	<link rel="stylesheet" type="text/css" href="./css/style.css?v=201702131026">
+	<link rel="stylesheet" type="text/css" href="./css/style.css?v=201702202211">
 	<style type="text/css">
 		#l-map{height:100%;width:100%;}
 	</style>
@@ -123,7 +123,7 @@
 				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="800" class="hidden text-light">
 				                                            	<p>
 				                                            		<span class="caption-txt intro2-txt">更震撼的企业宣传  &nbsp;&nbsp;更生动的产品推荐</span>
-				                                            		<img src="./images/swiper/intro-02-line.png">
+				                                            		<img class="intro2-line" src="./images/swiper/intro-02-line.png">
 				                                            	</p>
 				                                            </h4>
 				                                        </div>
@@ -787,8 +787,8 @@
 	</div>
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 	<script src="./js/plugin/core.min.js?v=201611170957"></script>
-	<script src="./js/yiqi.js?v=201701041555"></script>
-	<script src="./js/base.js?v=201701041555"></script>
+	<script src="./js/yiqi.js?v=201702202211"></script>
+	<script src="./js/base.js?v=201702202211"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XjYb8I0LmkLSxb47eyDSSCtsYUInYn19"></script>
 	<script>
 
