--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
 		})();
 
 		//修改路径
-		var path = "./images/1.png";
+		var path = "./images/header/phone_icon_h.png";
 		var path2 = "./images/header/phone_icon.png";
 		$(".phone span").mouseover(function(){
 		  $(".phone-icon").attr('src',path); 
