--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 			</div>
 		</div>
 		<!-- 关于绎奇 -->
-		<div id="about" class="about section">
+		<div id="about" name="about" class="about section">
 			<div class="about-wall">
 				<div class="title">
 					<span class="title-name">关于绎奇</span>
@@ -326,7 +326,7 @@
 			</div>
 		</div>
 		<!-- 最新案例 -->
-		<div id="example" class="example section">
+		<div id="example" name="example" class="example section">
 			<div class="example-title">
 				<div class="title">
 					<span class="title-name">最新案例</span>
@@ -463,7 +463,7 @@
 			</div>
 		</div>
 		<!-- 课程培训 -->
-		<div id="lession" class="lession section">
+		<div id="lession" name="lession" class="lession section">
 			<div class="lession-title">
 				<div class="title">
 					<span class="title-name">培训课程</span>
@@ -535,7 +535,7 @@
 			</div>
 		</div>
 		<!-- 核心团队 -->
-		<div id="member" class="member section">
+		<div id="member" name="member" class="member section">
 			<div class="content">
 				<div class="title">
 					<span class="title-name">核心团队</span>
@@ -551,7 +551,7 @@
 			</div>
 		</div>
 		<!-- 服务类目 -->
-		<div id="service" class="service section">
+		<div id="service" name="service" class="service section">
 			<div class="service-title">
 				<div class="title">
 					<span class="title-name">服务类目</span>
@@ -649,7 +649,7 @@
 			</div>
 		</div>
 		<!-- 合作伙伴 -->
-		<div id="partner" class="partner section">
+		<div id="partner" name="partner" class="partner section">
 			<div class="partner-title">
 				<div class="title">
 					<span class="title-name">合作伙伴</span>
@@ -687,7 +687,7 @@
 			</div>
 		</div>
 		<!-- 联系我们 -->
-		<div id="contact" class="contactus section">
+		<div id="contact"  name="contact" class="contactus section">
 			<div class="contact-title">
 				<div class="title">
 					<span class="title-name">联系我们</span>
