--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<a href='#' data-target="service">服务类目</a>
 						</li>
 						<li>
-							<a href='#' data-target="">最新动态</a>
+							<a href='#' data-target="news">最新动态</a>
 						</li>
 						<li>
 							<a href='#' data-target="partner">合作伙伴</a>
@@ -644,6 +644,158 @@
 								</p>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- 最新动态 -->
+		<div id="news" name="news" class="news section">
+			<div class="news-title">
+				<div class="title">
+					<span class="title-name">最新动态</span>
+					<span class="title-en">STAY INFORMED</span>
+					<span class="title-line"></span>
+				</div>
+			</div>
+			<div class="news-wrap clearfix">
+				<div class="news-box">
+					<ul class="news-list active">
+						<li>
+							<a href="#">
+								<img src="./images/news/news_01.jpg">
+								<div class="contents">
+									<h3>瀚华金控-砚洲岛生态小镇规划PPT制作</h3>
+									<p class="txt">始创于2004年，公司于2014年6月在香港联交所挂牌上市，主要专注于为中小微企业和个人提供融资担保、小额贷款、互联网金融、金融保理、资本管理、融资租赁等多元化综合性金融服务。多次完成瀚华多项工作汇报PPT制作，这次主要配合完成砚洲岛生态小镇规划设计，规划内容一共100多页，历时半个月。</p>
+								</div>
+								<div class="time">
+									02/08/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./images/news/news_01.jpg">
+								<div class="contents">
+									<h3>惠金所-企业年度表彰大会PPT设计</h3>
+									<p class="txt">惠金所是阳光保险发起设立的互联网金融平台，成立于2015年4月，惠金所致力为个人、企业、金融机构提供金融资产交易信息服务，打造综合性互联网金融服务平台。已经是第三次服务惠金所，前两次是工作汇报，这次是年终总结。版面上，要求内容精炼，主要以图片为主。动画上，酷炫、生动，与演讲内容紧密衔接。</p>
+								</div>
+								<div class="time">
+									24/01/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./images/news/news_02.jpg">
+								<div class="contents">
+									<h3>紫金投资集团-年终总结大会PPT制作</h3>
+									<p class="txt">南京紫金投资集团有限责任公司于2008年06月17日在南京市工商行政管理局登记成立。公司经营范围包括股权投资；实业投资；资产管理；财务咨询、投资咨询等。
+									绎奇现场策划并确定会议内容，3个工作日完成23页的汇报内容。参会人数达200人左右，打破以往领导读稿的演讲形式，真正做到声画合一的现场效果。
+									</p>
+								</div>
+								<div class="time">
+									20/01/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+					</ul>
+					<ul class="news-list">
+						<li>
+							<a href="#">
+								<img src="./images/news/news_02.jpg">
+								<div class="contents">
+									<h3>瀚华金控-砚洲岛生态小镇规划PPT制作</h3>
+									<p class="txt">始创于2004年，公司于2014年6月在香港联交所挂牌上市，主要专注于为中小微企业和个人提供融资担保、小额贷款、互联网金融、金融保理、资本管理、融资租赁等多元化综合性金融服务。多次完成瀚华多项工作汇报PPT制作，这次主要配合完成砚洲岛生态小镇规划设计，规划内容一共100多页，历时半个月。</p>
+								</div>
+								<div class="time">
+									02/08/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./images/news/news_02.jpg">
+								<div class="contents">
+									<h3>惠金所-企业年度表彰大会PPT设计</h3>
+									<p class="txt">惠金所是阳光保险发起设立的互联网金融平台，成立于2015年4月，惠金所致力为个人、企业、金融机构提供金融资产交易信息服务，打造综合性互联网金融服务平台。已经是第三次服务惠金所，前两次是工作汇报，这次是年终总结。版面上，要求内容精炼，主要以图片为主。动画上，酷炫、生动，与演讲内容紧密衔接。</p>
+								</div>
+								<div class="time">
+									24/01/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./images/news/news_01.jpg">
+								<div class="contents">
+									<h3>紫金投资集团-年终总结大会PPT制作</h3>
+									<p class="txt">南京紫金投资集团有限责任公司于2008年06月17日在南京市工商行政管理局登记成立。公司经营范围包括股权投资；实业投资；资产管理；财务咨询、投资咨询等。
+									绎奇现场策划并确定会议内容，3个工作日完成23页的汇报内容。参会人数达200人左右，打破以往领导读稿的演讲形式，真正做到声画合一的现场效果。
+									</p>
+								</div>
+								<div class="time">
+									20/01/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+					</ul>
+					<ul class="news-list">
+						<li>
+							<a href="#">
+								<img src="./images/news/news_02.jpg">
+								<div class="contents">
+									<h3>瀚华金控-砚洲岛生态小镇规划PPT制作</h3>
+									<p class="txt">始创于2004年，公司于2014年6月在香港联交所挂牌上市，主要专注于为中小微企业和个人提供融资担保、小额贷款、互联网金融、金融保理、资本管理、融资租赁等多元化综合性金融服务。多次完成瀚华多项工作汇报PPT制作，这次主要配合完成砚洲岛生态小镇规划设计，规划内容一共100多页，历时半个月。</p>
+								</div>
+								<div class="time">
+									02/08/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./images/news/news_01.jpg">
+								<div class="contents">
+									<h3>惠金所-企业年度表彰大会PPT设计</h3>
+									<p class="txt">惠金所是阳光保险发起设立的互联网金融平台，成立于2015年4月，惠金所致力为个人、企业、金融机构提供金融资产交易信息服务，打造综合性互联网金融服务平台。已经是第三次服务惠金所，前两次是工作汇报，这次是年终总结。版面上，要求内容精炼，主要以图片为主。动画上，酷炫、生动，与演讲内容紧密衔接。</p>
+								</div>
+								<div class="time">
+									24/01/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./images/news/news_02.jpg">
+								<div class="contents">
+									<h3>紫金投资集团-年终总结大会PPT制作</h3>
+									<p class="txt">南京紫金投资集团有限责任公司于2008年06月17日在南京市工商行政管理局登记成立。公司经营范围包括股权投资；实业投资；资产管理；财务咨询、投资咨询等。
+									绎奇现场策划并确定会议内容，3个工作日完成23页的汇报内容。参会人数达200人左右，打破以往领导读稿的演讲形式，真正做到声画合一的现场效果。
+									</p>
+								</div>
+								<div class="time">
+									20/01/2017
+								</div>
+								<span class="time-icon"></span>
+							</a>
+						</li>
+					</ul>
+					<div class="pagination">
+						<span class="prev"> < </span>
+						<ul id="news_page" class="page">
+							<li class="active">1</li>
+							<li>2</li>
+							<li>3</li>
+						</ul>
+						<span class="next"> > </span>
 					</div>
 				</div>
 			</div>
