--- a/lession.html
+++ b/lession.html
@@ -324,6 +324,82 @@
 							<span class="line"></span>
 						</div>
 						<span class="sub-title">STAY INFORMED</span>
+						<ul class="news-list active">
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_01.jpg">
+									<div class="contents">
+										<h3>中国平安保险</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_02.jpg">
+									<div class="contents">
+										<h3>太平鸟</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_03.jpg">
+									<div class="contents">
+										<h3>中国平安保险</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+						</ul>
+						<ul class="news-list">
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_01.jpg">
+									<div class="contents">
+										<h3>中国平安保险</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_02.jpg">
+									<div class="contents">
+										<h3>太平鸟</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_03.jpg">
+									<div class="contents">
+										<h3>中国平安保险</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+						</ul>
 						<ul class="news-list">
 							<li>
 								<a href="#">
@@ -364,7 +440,7 @@
 						</ul>
 						<div class="pagination">
 							<span class="prev"> < </span>
-							<ul class="page">
+							<ul id="news_page" class="page">
 								<li class="active">1</li>
 								<li>2</li>
 								<li>3</li>
